# Vulkan-Tutorial

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.adoc  CONTRIBUTING.adoc  CONTRIBUTORS.adoc  README.adoc  README.md  REUSE.toml  antora-ci-playbook.yml  package-lock.json  vcpkg.json
attachments/: .clang-format  00_base_code.cpp  01_instance_creation.cpp  02_validation_layers.cpp  03_physical_device_selection.cpp  04_logical_device.cpp  05_window_surface.cpp  06_swap_chain_creation.cpp  07_image_views.cpp  08_graphics_pipeline.cpp  09_shader_base.slang  09_shader_modules.cpp  10_fixed_functions.cpp  11_render_passes.cpp  12_graphics_pipeline_complete.cpp  13_framebuffers.cpp  14_command_buffers.cpp  15_hello_triangle.cpp  16_frames_in_flight.cpp  17_swap_chain_recreation.cpp  18_vertex_input.cpp  19_shader_vertexbuffer.slang  19_vertex_buffer.cpp  20_staging_buffer.cpp  21_index_buffer.cpp  22_descriptor_layout.cpp  22_descriptor_set_layout.cpp  22_shader_ubo.slang  23_descriptor_sets.cpp  24_texture_image.cpp  25_sampler.cpp  26_shader_textures.slang  26_texture_mapping.cpp  27_depth_buffering.cpp  28_model_loading.cpp  29_mipmapping.cpp  30_multisampling.cpp  31_compute_shader.cpp  31_shader_compute.slang  32_ecosystem_utilities.cpp  (+15 more)
attachments/CMake/: FindKTX.cmake  FindTinyGLTF.cmake  FindVulkan.cmake  FindVulkanHpp.cmake  Findglm.cmake  Findnlohmann_json.cmake  Findstb.cmake  Findtinygltf.cmake  Findtinyobjloader.cmake  fix_vulkan_cppm.cmake
attachments/advanced_gltf/: CMakeLists.txt  animation.h  animation_component.cpp  animation_component.h  audio_system.cpp  engine.cpp  engine.h  imgui_system.cpp  install_dependencies_linux.sh  install_dependencies_windows.bat  main.cpp  model_loader.cpp  model_loader.h  morph_accumulate.slang  node.h  pbr_heatmap.slang  physics_interface.h  physics_system.cpp  physics_system.h  physics_world_jolt.cpp  renderer.h  renderer_advanced_types.h  renderer_core.cpp  renderer_pipelines.cpp  renderer_ray_query.cpp  renderer_rendering.cpp  renderer_resources.cpp  renderer_utils.cpp  scene_loading.cpp  scene_loading.h  skinning.slang  tutorial_demo.cpp  tutorial_demo.h
attachments/advanced_gltf/CMake/: FindVulkanHpp.cmake
attachments/advanced_gltf/assets/: add_physics_extras.py  download_samples.sh
attachments/android/: README.md  build.gradle  gradle.properties  settings.gradle
attachments/android/app/: build.gradle
attachments/assets/: plant_on_table.mtl  viking_room.glb
attachments/compute/: 02_compute_architecture.cpp  02_compute_architecture.slang  03_memory_models.cpp  03_memory_models.slang  04_subgroup_operations.cpp  04_subgroup_operations.slang  05_opencl_on_vulkan.cl  05_opencl_on_vulkan.cpp  06_advanced_data_structures.cpp  06_advanced_data_structures.slang  07_gpu_driven_pipelines.cpp  07_gpu_driven_pipelines.slang  08_async_compute.cpp  08_async_compute.slang  09_specialized_math.cpp  09_specialized_math.slang  10_performance_optimization.cpp  10_performance_optimization.slang  12_embedded.cpp  12_embedded.slang  CMakeLists.txt  compute_common.h  install_dependencies_linux.sh  install_dependencies_windows.bat
attachments/compute/android/: build.gradle  settings.gradle
attachments/ml_inference/: CMakeLists.txt  README.adoc  camera_inference.cpp  ci_render_validation.cpp  download_model.py  generate_roadmap_models.py  image_classifier.cpp  iree_mnist_inference.cpp  iree_mnist_inference.h  iree_vulkan_inference.cpp  mnist_inference.cpp  nnef_inference.cpp  nnef_loader.hpp  onnx_inference.cpp  onnx_inference.h  rl_exploration.cpp  rt_optimization.cpp  setup_env.bat  setup_env.sh  setup_python_env.py  train_mnist.py  vulkan_mnist_inference.cpp  vulkan_mnist_inference.h  weight_loader.hpp
attachments/ml_inference/common/: imgui_system.cpp  imgui_system.h  mnist_ui.h  vulkan_nnef_inference.cpp  vulkan_nnef_inference.h
attachments/ml_inference/rPi/: CMakeLists.txt  README.adoc  embedded_wildlife_cam.cpp  setup_rpi.sh
attachments/ml_inference/scripts/: compare_outputs.py  compile_iree.sh  convert_mobilenet.py  export_mobilenet_iree.py  generate_test_input.py  generate_tiny_nnef_weights.py  nnef_to_onnx.py  onnx2tf_patched.py  onnx_to_nnef.py
attachments/ml_inference/shaders/: dense.slang  image_resize.slang  nnef_ops.slang  (+4 more)
attachments/openxr_engine/: CMakeLists.txt  README.adoc  camera_component.cpp  camera_component.h  engine.cpp  engine.h  imgui_system.cpp  install_dependencies_linux.sh  install_dependencies_windows.bat  main.cpp  memory_pool.cpp  memory_pool.h  platform.h  renderer.h  renderer_core.cpp  renderer_pipelines.cpp  renderer_rendering.cpp  renderer_resources.cpp  renderer_utils.cpp  xr_context.cpp  xr_context.h
attachments/siggraph2026_vk_tutorial/: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.adoc  README.md  init_submodules.py
attachments/simple_engine/: CMakeLists.txt  audio_system.cpp  audio_system.h  camera_component.cpp  camera_component.h  component.cpp  component.h  crash_reporter.h  debug_system.h  descriptor_manager.cpp  descriptor_manager.h  engine.cpp  engine.h  entity.cpp  entity.h  fetch_bistro_assets.bat  fetch_bistro_assets.sh  imgui_system.cpp  imgui_system.h  install_dependencies_linux.sh  install_dependencies_windows.bat  main.cpp  memory_pool.cpp  memory_pool.h  mesh_component.cpp  mesh_component.h  model_loader.cpp  model_loader.h  physics_system.cpp  physics_system.h  pipeline.cpp  pipeline.h  platform.cpp  platform.h  renderdoc_debug_system.cpp  renderdoc_debug_system.h  renderer.h  renderer_compute.cpp  renderer_core.cpp  renderer_pipelines.cpp  (+18 more)
attachments/sync2_engine/: CMakeLists.txt  audio_system.cpp  audio_system.h  engine.cpp  engine.h  imgui_system.cpp  imgui_system.h  main.cpp  memory_pool.cpp  memory_pool.h  model_loader.cpp  physics_system.cpp  physics_system.h  pipeline.cpp  renderer.h  renderer_compute.cpp  renderer_core.cpp  renderer_pipelines.cpp  renderer_ray_query.cpp  renderer_rendering.cpp  renderer_resources.cpp  renderer_utils.cpp  scene_loading.cpp
attachments/template/: CMakeLists.txt  main.cpp  shader.slang
(+603 files in other folders)
